Task ASINT-1334: Support AIE 4.8.0 release